[gd_scene load_steps=16 format=2]

[ext_resource path="res://ShopManageMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/shops/icons/upgrade.png" type="Texture" id=2]
[ext_resource path="res://CannotBuy.gd" type="Script" id=3]
[ext_resource path="res://Confirm.gd" type="Script" id=4]
[ext_resource path="res://Purchased.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/shops/icons/hire.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/shops/icons/money-icon.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/shops/example.jpg" type="Texture" id=8]
[ext_resource path="res://assets/fonts/Schr√∂dinger.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/textures/shops/icons/exit.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 49
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 46
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 9 )

[node name="ShopMenuBuy" type="Node2D"]
script = ExtResource( 1 )

[node name="ShopName" type="Label" parent="."]
margin_left = 473.889
margin_top = 41.1059
margin_right = 581.889
margin_bottom = 78.1059
text = "Shop_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="BGContainer"]
position = Vector2( 512, 300 )
z_index = -1
texture = ExtResource( 8 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="UpgradeValueRect" type="ColorRect" parent="GUI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1014.0
margin_top = 30.0
margin_right = -614.0
margin_bottom = 130.0
color = Color( 1, 1, 1, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeValue" type="Label" parent="GUI/UpgradeValueRect"]
margin_left = 125.0
margin_top = 6.0
margin_right = 396.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeValueIcon" type="Sprite" parent="GUI/UpgradeValueRect"]
position = Vector2( 64.1834, 50.0253 )
scale = Vector2( 0.0772963, 0.0558992 )
texture = ExtResource( 7 )

[node name="HireValueRect" type="ColorRect" parent="GUI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -170.0
margin_right = -24.0
margin_bottom = -70.0
color = Color( 1, 1, 1, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireValue" type="Label" parent="GUI/HireValueRect"]
margin_left = 125.0
margin_top = 6.0
margin_right = 396.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireValueIcon" type="Sprite" parent="GUI/HireValueRect"]
position = Vector2( 64.1834, 50.0253 )
scale = Vector2( 0.0772963, 0.0558992 )
texture = ExtResource( 7 )

[node name="ExitRect" type="ColorRect" parent="GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 615.0
margin_top = -150.0
margin_right = 1015.0
margin_bottom = -30.0
rect_min_size = Vector2( 400, 120 )
color = Color( 1, 1, 1, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitIcon" type="Sprite" parent="GUI/ExitRect"]
position = Vector2( 338.292, 57.8025 )
scale = Vector2( 0.227424, 0.216984 )
texture = ExtResource( 10 )

[node name="ExitButton" type="Button" parent="GUI/ExitRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Salir"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeRect" type="ColorRect" parent="GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -150.0
margin_right = 410.0
margin_bottom = -30.0
rect_min_size = Vector2( 400, 120 )
color = Color( 1, 1, 1, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeIcon" type="Sprite" parent="GUI/UpgradeRect"]
position = Vector2( 57.0175, 59.6902 )
scale = Vector2( 0.227424, 0.216984 )
texture = ExtResource( 2 )

[node name="Upgrade" type="Button" parent="GUI/UpgradeRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeLabel" type="Label" parent="GUI/UpgradeRect"]
margin_left = 119.0
margin_right = 397.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mejorar
Local"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireRect" type="ColorRect" parent="GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = -350.0
margin_right = 1000.0
margin_bottom = -230.0
rect_min_size = Vector2( 400, 120 )
color = Color( 1, 1, 1, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireIcon" type="Sprite" parent="GUI/HireRect"]
position = Vector2( 57.0175, 59.6902 )
scale = Vector2( 0.227424, 0.216984 )
texture = ExtResource( 6 )

[node name="Hire" type="Button" parent="GUI/HireRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HireLabel" type="Label" parent="GUI/HireRect"]
margin_left = 119.0
margin_right = 397.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Contratar
Empleado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CannotBuy" type="Popup" parent="GUI"]
pause_mode = 2
margin_left = 272.0
margin_top = 188.0
margin_right = 818.0
margin_bottom = 498.0
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/CannotBuy"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/CannotBuy/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="CannotBuyButton" type="Button" parent="GUI/CannotBuy/ColorRect/ColorRect"]
margin_left = 142.0
margin_top = 186.0
margin_right = 380.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 4 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CannotBuyLabel" type="Label" parent="GUI/CannotBuy/ColorRect/ColorRect"]
margin_left = 38.0
margin_top = 18.0
margin_right = 486.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 5 )
text = "NO PUEDES COMPRARLO

No tienes dinero suficiente."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Popup" parent="GUI"]
pause_mode = 2
margin_left = 272.0
margin_top = 188.0
margin_right = 818.0
margin_bottom = 498.0
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Confirm/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0.545098, 0.196078, 0.196078, 1 )

[node name="ConfirmLabel" type="Label" parent="GUI/Confirm/ColorRect/ColorRect"]
margin_left = 38.0
margin_top = 18.0
margin_right = 500.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 5 )
text = "CONFIRMAR COMPRA
Dinero actual: $xxxx
Requerido: -$xxxx
Restante: $xxxx"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="GUI/Confirm/ColorRect/ColorRect"]
margin_left = 38.0
margin_top = 186.0
margin_right = 246.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 4 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="GUI/Confirm/ColorRect/ColorRect"]
margin_left = 294.0
margin_top = 186.0
margin_right = 502.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 4 )
text = "Cancelar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Purchased" type="Popup" parent="GUI"]
pause_mode = 2
margin_left = 128.0
margin_top = 184.0
margin_right = 904.0
margin_bottom = 498.0
popup_exclusive = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Purchased"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Purchased/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0.054902, 0.305882, 0, 1 )

[node name="PurchasedLabel" type="Label" parent="GUI/Purchased/ColorRect/ColorRect"]
margin_left = 62.0
margin_top = 18.0
margin_right = 702.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 5 )
text = "LOCAL ADQUIRIDO!

A partir de ahora puedes administrar
e invertir en este local."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PurchasedButton" type="Button" parent="GUI/Purchased/ColorRect/ColorRect"]
margin_left = 254.0
margin_top = 190.0
margin_right = 492.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 4 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GUI/ExitRect/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="GUI/UpgradeRect/Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="GUI/HireRect/Hire" to="." method="_on_Hire_pressed"]
[connection signal="pressed" from="GUI/CannotBuy/ColorRect/ColorRect/CannotBuyButton" to="GUI/CannotBuy" method="_on_CannotBuyButton_pressed"]
[connection signal="purchased" from="GUI/Confirm" to="." method="_on_Confirm_purchased"]
[connection signal="pressed" from="GUI/Confirm/ColorRect/ColorRect/YesButton" to="GUI/Confirm" method="_on_YesButton_pressed"]
[connection signal="pressed" from="GUI/Confirm/ColorRect/ColorRect/NoButton" to="GUI/Confirm" method="_on_NoButton_pressed"]
[connection signal="pressed" from="GUI/Purchased/ColorRect/ColorRect/PurchasedButton" to="GUI/Purchased" method="_on_PurchasedButton_pressed"]
